force-app/main/default/objects/CRMfusionDBR101__AutoConvert_Setting__c/CRMfusionDBR101__AutoConvert_Setting__c.object-meta.xml
<CustomObject>
    <customHelpPage>CRMfusionDBR101__DB_Help</customHelpPage>
    <label>DupeBlocker Auto-Convert Setting</label>
    <nameField>
        <displayFormat>Setting: {0}</displayFormat>
        <label>DupeBlocker Auto-Convert Setting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DupeBlocker Auto-Convert Settings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>