force-app/main/default/objects/CRMfusionDBR101__AutoConvert_Setting__c/fields/CRMfusionDBR101__Conversion_Priority__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Conversion_Priority__c</fullName>
    <defaultValue>10</defaultValue>
    <inlineHelpText>This field specifies the order in which multiple auto-convert scenarios are acted upon.  The lower the number, the higher the priority.  Lead to Contact  auto-convert scenarios always execute before Lead to Account auto-convert scenarios.</inlineHelpText>
    <label>Conversion Priority</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>