force-app/main/default/objects/CRMfusionDBR101__AutoConvert_Setting__c/fields/CRMfusionDBR101__Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Opportunity_Stage__c</fullName>
    <inlineHelpText>Opportunity stage to use when creating an opportunity during an automatic lead conversion.</inlineHelpText>
    <label>Opportunity Stage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>