force-app/main/default/objects/CRMfusionDBR101__AutoConvert_Setting__c/fields/CRMfusionDBR101__Scenario__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Scenario__c</fullName>
    <label>Scenario</label>
    <referenceTo>CRMfusionDBR101__Scenario__c</referenceTo>
    <relationshipLabel>DupeBlocker Auto-Convert Settings</relationshipLabel>
    <relationshipName>AutoConvert_Settings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>