force-app/main/default/objects/CRMfusionDBR101__AutoConvert_Setting__c/fields/CRMfusionDBR101__Server_URL__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Server_URL__c</fullName>
    <formula>LEFT( $Api.Enterprise_Server_URL_290 , FIND(&apos;/&apos;, $Api.Enterprise_Server_URL_290, 9) )</formula>
    <label>Server URL</label>
    <type>Text</type>
</CustomField>