force-app/main/default/objects/CRMfusionDBR101__AutoConvert_Setting__c/fields/CRMfusionDBR101__Task_Subject__c.field-meta.xml
<CustomField>
    <fullName>CRMfusionDBR101__Task_Subject__c</fullName>
    <defaultValue>&apos;DupeBlocker Auto-Convert - Original Lead Data&apos;</defaultValue>
    <inlineHelpText>The subject that should be used when creating the task for the converted lead during an automatic conversion.</inlineHelpText>
    <label>Task Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>