force-app/main/default/objects/CRMfusionDBR101__AutoConvert_Setting__c/validationRules/CRMfusionDBR101__Contact_Owner_Null_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>CRMfusionDBR101__Contact_Owner_Null_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( TEXT( CRMfusionDBR101__Scenario__r.CRMfusionDBR101__Scenario_Type__c ) = &apos;Lead to Account&apos;, OR( ISNULL( TEXT( CRMfusionDBR101__Contact_Owner__c ) ), TEXT( CRMfusionDBR101__Contact_Owner__c ) = &apos;&apos; ) )</errorConditionFormula>
    <errorDisplayField>CRMfusionDBR101__Contact_Owner__c</errorDisplayField>
    <errorMessage>The Contact Owner must be set for Lead to Account Auto-Convert scenarios.</errorMessage>
</ValidationRule>