force-app/main/default/objects/CRMfusionDBR101__AutoConvert_Setting__c/validationRules/CRMfusionDBR101__Conversion_Target_Not_Null.validationRule-meta.xml
<ValidationRule>
    <fullName>CRMfusionDBR101__Conversion_Target_Not_Null</fullName>
    <active>true</active>
    <errorConditionFormula>OR( ISNULL( TEXT( CRMfusionDBR101__Conversion_Target__c ) ), TEXT( CRMfusionDBR101__Conversion_Target__c ) = &apos;&apos; )</errorConditionFormula>
    <errorDisplayField>CRMfusionDBR101__Conversion_Target__c</errorDisplayField>
    <errorMessage>The Conversion Target must be specified.</errorMessage>
</ValidationRule>