force-app/main/default/objects/CRMfusionDBR101__AutoConvert_Setting__c/validationRules/CRMfusionDBR101__Opportunity_Close_Date_Null_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>CRMfusionDBR101__Opportunity_Close_Date_Null_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( CRMfusionDBR101__Create_Opportunity__c, OR( ISNULL( TEXT( CRMfusionDBR101__Opportunity_Close_Date__c ) ), TEXT( CRMfusionDBR101__Opportunity_Close_Date__c ) = &apos;&apos; ) )</errorConditionFormula>
    <errorDisplayField>CRMfusionDBR101__Opportunity_Close_Date__c</errorDisplayField>
    <errorMessage>The Opportunity Close Date cannot be null if Create Opportunity is selected.</errorMessage>
</ValidationRule>