force-app/main/default/objects/CRMfusionDBR101__AutoConvert_Setting__c/validationRules/CRMfusionDBR101__Opportunity_Stage_Null_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>CRMfusionDBR101__Opportunity_Stage_Null_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( CRMfusionDBR101__Create_Opportunity__c, OR( ISNULL( CRMfusionDBR101__Opportunity_Stage__c ), CRMfusionDBR101__Opportunity_Stage__c = &apos;&apos; ) )</errorConditionFormula>
    <errorDisplayField>CRMfusionDBR101__Opportunity_Stage__c</errorDisplayField>
    <errorMessage>The Opportunity Stage must be set if Create Opportunity is checked.</errorMessage>
</ValidationRule>