force-app/main/default/objects/CRMfusionDBR101__AutoConvert_Setting__c/validationRules/CRMfusionDBR101__Task_Owner_Null_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>CRMfusionDBR101__Task_Owner_Null_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND( CRMfusionDBR101__Create_Task__c, OR( ISNULL( TEXT( CRMfusionDBR101__Task_Owner__c ) ), TEXT(CRMfusionDBR101__Task_Owner__c ) = &apos;&apos; ) )</errorConditionFormula>
    <errorDisplayField>CRMfusionDBR101__Task_Owner__c</errorDisplayField>
    <errorMessage>If the Save as Task option is selected, you must select a Task Owner.</errorMessage>
</ValidationRule>